[package]
name = "bubble-audio-tool"
version = "0.1.0"
authors = ["Scott97 <scottbarnard5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1" # For exporting cwt
wav = "0.4.0" # For reading file
exec_time = "0.1.4" # For benchmarking, not preferred method
approx = "0.3.2" # For unit tests with floats
queues = "1.1.0" # For circular buffer
charts = "0.3.0" # For plotting
indicatif = "0.15.0" # For progress bar
winapi-util = "0.1.5" # For colored text
structopt = "0.3.17" # For command line interface

bubble-lib = { path = "../bubble-lib" }
