[package]
name = "bubble-lib"
version = "0.1.0"
authors = ["Scott97 <scottbarnard5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "3.0.1" # For convolution
itertools = "0.9.0" # For padding iterators
rayon = "1.3.1" # For parallel iterators
packed_simd = "0.3.3" # For SIMD
structopt = "0.3.17" # For command line support

[dev-dependencies]
csv = "1" # For exporting cwt
wav = "0.4.0" # For reading file
approx = "0.3.2" # For unit tests with floats
