[package]
name = "cwt-cli"
version = "0.1.0"
authors = ["Scott97 <scottbarnard5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1" # For exporting cwt
wav = "0.4.0" # For reading file
rustfft = "3.0.1" # For convolution
itertools = "0.9.0" # For padding iterators
rayon = "1.3.1" # For parallel iterators
packed_simd = "0.3.3" # For SIMD
exec_time = "0.1.4" # For benchmarking, not preferred method
approx = "0.3.2" # For unit tests with floats
queues = "1.1.0" # For circular buffer