[package]
name = "video"
version = "0.1.0"
authors = ["Scott97 <scottbarnard5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# opencv = "0.46"
opencv = {version = "0.46", features = ["buildtime-bindgen"]}
csv = "1" # For exporting data